kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: requests-deployment
  namespace: requests
spec:
  replicas: 3
  selector:
    matchLabels:
      app: requests-app
  template:
    metadata:
      labels:
        app: requests-app
    spec:
      containers:
        - name: requests
          image: dimitarpavlovski/requests:latest
          ports:
            - containerPort: 8080
