kubernetes/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: requests-postgres-sts
  namespace: requests
spec:
  serviceName: requests-postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
        namespace: requests
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
              name: postgres-port
          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgres
            - name: postgres-initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgres-initdb
          hostPath:
            path: /postgres-init
            type: Directory
  volumeClaimTemplates:
    - metadata:
        name: postgres-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 10Gi
