kubernetes/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: requests-postgres-service
  namespace: requests
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  clusterIP: None
