kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: requests-service
  namespace: requests
spec:
  selector:
    app: requests-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
